--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -1,14 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+<% provide(:title, @user.name) %>
+<div class="row">
+	<aside class="col-md-4">
+		<section class="user_info">
+			<div>
+				<%= gravatar_for @user, size: 200 %>
+				<h4>
+					<%= @user.name %><br>
+					<%= @user.email %>
+				</h4>
+			</div>			
+		</section>
+	</aside>
+</div>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
