--- a/sample_app/app/views/users/_form.html.erb
+++ b/sample_app/app/views/users/_form.html.erb
@@ -1,33 +1,28 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="row">
+	<div class="col-md-6 col-sm-8 col-md-offset-3 col-sm-offset-2">
+		<%= form_for(@user) do |f| %>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+			<%= render 'layouts/error_messages' %>
 
-  <div class="field">
-    <%= f.label :name %>*<br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %>*<br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>*<br>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>*<br>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+			<div class="field">
+				<%= f.label :name %>*<br>
+				<%= f.text_field :name, class: 'form-control' %>
+			</div>
+			<div class="field">
+				<%= f.label :email %>*<br>
+				<%= f.text_field :email, class: 'form-control' %>
+			</div>
+			<div class="field">
+				<%= f.label :password %>*<br>
+				<%= f.password_field :password, class: 'form-control' %>
+			</div>
+			<div class="field">
+				<%= f.label :password_confirmation %>*<br>
+				<%= f.password_field :password_confirmation, class: 'form-control' %>
+			</div>
+			<div class="actions">
+				<%= f.submit class: 'btn btn-primary' %>
+			</div>
+		<% end %>
+	</div>
+</div>
